fix: buffet picker on safari. Problem was safari can't animate between px and %

--- a/app/game/levels/interest_picker/bait.sass
+++ b/app/game/levels/interest_picker/bait.sass
@@ -21,7 +21,7 @@
   &.symbol i
     font-size: $size * .8
     line-height: $size
-  @media all and (min-width: 801px)
+  +tabletAndUp
     $size: $spaceBig * 2
     min-height: $size
     min-width: $size
@@ -53,12 +53,13 @@
 // ----------------------------------------- Buffet Carosel Animation
 .menu .bait
   position: absolute
-  //margin-left: -100px
-  left: -200px
+  margin-left: -200px
+  left: 0%
   text-shadow: $spaceTiny 0 1px $colorForegroundCool, -$spaceTiny 0 1px $colorForegroundCool, 0 $spaceTiny 1px $colorForegroundCool, 0 -$spaceTiny 1px $colorForegroundCool
-  +transition( left 12s linear, color .2s, background .2s )
+  +transition( left 12s linear, margin 12s linear, color .2s, background .2s )
   &.sliding
-    left: 105%
+    margin-left: 0
+    left: 110%
   &.sliding.picked
     left: 19999px
 
